--- a/catalog.html
+++ b/catalog.html
@@ -9,28 +9,54 @@
   <a class="main-header-logo">
     <img src="logo-main" width="175" height="45" alt="Логотип магазина Device">
   </a>
-  <a href="#">Поиск по сайту</a>
+  <p>Поиск по сайту</p>
   <!-- Здесь будет форма -->
   <ul class="user-navigation">
     <li>
-      <a href="#">Войти</a></li>
+      <a href="#">Войти</a>
+    </li>
     <li>
-      <a href="#">Сравнить</a></li>
+      <a href="#">Сравнить</a>
+    </li>
     <li>
-      <a href="#">Корзина</a></li>
+      <a href="#">Корзина</a>
+    </li>
   </ul>
+
   <nav class="header-navigation">
-    <ul class="site-navigation">
+    <ul class="catalog-list-header">
       <li>
-        <a href="catalog.html">Каталог товаров</a></li>
+        <a href="#">Вирутальная реальность</a>
+      </li>
       <li>
-        <a href="warranty.html">Гарантия</a></li>
+        <a href="#">Моноподы для селфи</a>
+      </li>
       <li>
-        <a href="delivery.html">Доставка</a></li>
+        <a href="#">Экшн камеры</a>
+      </li>
       <li>
-        <a href="contacts.html">Контакты</a></li>
+        <a href="#">Фитнес браслеты</a>
+      </li>
+      <li>
+        <a href="#">Умные часы</a>
+      </li>
+      <li>
+        <a href="#">Квадрокоптеры</a>
+      </li>
     </ul>
   </nav>
+  <ul class="services-header">
+    <li>
+      <a href="warranty.html">Гарантия</a>
+    </li>
+    <li>
+      <a href="delivery.html">Доставка</a>
+    </li>
+    <li>
+      <a href="contacts.html">Контакты</a>
+    </li>
+  </ul>
+
 </header>
 
   <main class="main-page">
@@ -43,154 +69,140 @@
     <li>
       <a class="breadcrumbs-current">Моноподы для селфи</a></li>
   </ul>
-  <section class="price__color">
-  <h2 class="price">Стоимость</h2>
-  <!-- Здесь будет форма -->
-   <p>От 500</p>
-    <p>До 5000</p>
-    <h2 class="filters">Фильтр:</h2>
-  <!-- Здесь будет форма -->
-  <b>Цвет</b>
-  <p>Черный</p>
-  <p>Белый</p>
-  <p>Синий</p>
-  <p>Красный</p>
-  <p>Розовый</p>
-  <b>Bluetooth</b>
-  <p>Есть</p>
-  <p>Нет</p>
-    <a href="btn-to-slow">Показать</a>
-    </section>
 
-    <section class="sorting">
-    <h2 class="visually-hidden">Сортировка</h2>
-    <b>Сортировка:</b>
-      <p>По цене</p>
-    <p>По типу</p>
-    <p>По популярности</p>
-    <!-- Здесь будет форма -->
-</section>
+  <section class="filters">
+  <h2 class="price">Фильтр:</h2>
+  <div>
+    <ul class="filters">
+      <li class="price">
+        <!-- Здесь будет форма -->
+      </li>
+      <li class="color">
+        <!-- Здесь будет форма -->
+      </li>
+      <li class="bluetooth">
+        <!-- Здесь будет форма -->
+      </li>
+    </ul>
+
+    <a href="btn-to-slow">Показать</a>
+  </div>
+
+    <ul class="sorting">
+      <li class="price"><a href="#">По цене</a></li>
+      <li class="type"><a href="#">По типу</a></li>
+      <li class="popular"><a href="#">По популярности</a></li>
+    </ul>
+  </section>
 
     <section class="list-product">
     <h2 class="visually-hidden">Список товаров</h2>
     <ul class="catalog-list">
-      <li class="catalog-item">
-        <h3>
-          <a href="catalog-item.html">
-            <span class="catalog-category">Селфи-палки</span>
-            <span class="catalog-item-title">Любительская селфи-палка</span>
-          </a>
-        </h3>
-        <p class="catalog-item-image">
-          <a href="catalog-item.html">
-            <img src="img/product-1.jpg" width="360" height="380"
-                 alt="Любительская селфи-палка"></a></p>
-        <p class="catalog-item-price">
+
+      <li class="catalog-item-1">
+         <a href="catalog-item-1.html">
+         <h3>Любительская селфи-палка</h3>
+       </a>
+            <p class="catalog-item-image">
+            <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+            </p>
           <b>500 руб.</b>
-          <a class="button" href="#">В корзину</a></p>
+        <div>
+          <a  href="#">В корзину</a>
+          <a  href="#">Сравнить</a>
+        </div>
       </li>
-      <li class="catalog-item">
-        <h3>
-          <a href="catalog-item.html">
-            <span class="catalog-category">Селфи-палки</span>
-            <span class="catalog-item-title">Профессиональная селфи-палка</span>
-          </a>
-        </h3>
+
+      <li class="catalog-item-2">
+        <a href="catalog-item-2.html">
+          <h3>Профессиональная селфи-палка</h3>
+        </a>
         <p class="catalog-item-image">
-          <a href="catalog-item.html">
-            <img src="img/product-2.jpg" width="360" height="380"
-                 alt="Профессиональная селфи-палка">
-          </a>
+          <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
         </p>
-        <p class="catalog-item-price">
-          <b>1500 руб.</b>
-          <a class="button" href="#">В корзину</a></p>
+        <b>1500 руб.</b>
+        <div>
+          <a  href="#">В корзину</a>
+          <a  href="#">Сравнить</a>
+        </div>
       </li>
-      <li class="catalog-item">
-        <h3>
-          <a href="catalog-item.html">
-            <span class="catalog-category">Селфи-палки</span>
-            <span class="catalog-item-title">Непотопляемая селфи-палка</span>
-          </a>
-        </h3>
+
+      <li class="catalog-item-3">
+        <a href="catalog-item-3.html">
+          <h3>Непотопляемая селфи-палка</h3>
+        </a>
         <p class="catalog-item-image">
-          <a href="catalog-item.html">
-            <img src="img/product-3.jpg" width="360" height="380"
-                 alt="Непотопляемая селфи-палка">
-          </a>
+          <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
         </p>
-        <p class="catalog-item-price">
-          <b>2500 руб.</b>
-          <a class="button" href="#">В корзину</a>
-        </p>
+        <b>2500 руб.</b>
+        <div>
+          <a  href="#">В корзину</a>
+          <a  href="#">Сравнить</a>
+        </div>
       </li>
-      <li class="catalog-item">
-        <h3>
-          <a href="catalog-item.html">
-            <span class="catalog-category">Селфи-палки</span>
-            <span class="catalog-item-title">Селфи палка «Следуй за мной»</span>
-          </a>
-        </h3>
+
+      <li class="catalog-item-4">
+        <a href="catalog-item-4.html">
+          <h3>Селфи палка «Следуй за мной»</h3>
+        </a>
         <p class="catalog-item-image">
-          <a href="catalog-item.html">
-            <img src="img/product-4.jpg" width="360" height="380"
-                 alt="Селфи палка «Следуй за мной»">
-          </a>
+          <img src="img/product-4.jpg" width="360" height="380" alt="Селфи палка «Следуй за мной»">
         </p>
-        <p class="catalog-item-price">
-          <b>4900 руб.</b>
-          <a class="button" href="#">В корзину</a>
-        </p>
+        <b>4900 руб.</b>
+        <div>
+          <a  href="#">В корзину</a>
+          <a  href="#">Сравнить</a>
+        </div>
       </li>
+
     </ul>
-    <ul class="pagination-list">
-      <li class="pagination-item-current">1</li>
-      <li class="pagination-item"><a href="#">2</a>
-      </li>
-      <li class="pagination-item"><a href="#">3</a>
-      </li>
+      <ul class="pagination-list">
+        <li class="button-back-page"><a href="#">Назад</a></li>
+        <li class="pagination-item-current">1</li>
+        <li class="pagination-item"><a href="#">2</a></li>
+        <li class="pagination-item"><a href="#">3</a></li>
+        <li class="button-forward-page"><a href="#">Вперед</a></li>
     </ul>
-    <a class="button-back-page" href="#">Назад</a>
-    <a class="button-forward-page" href="#">Вперед</a>
-</section>
+
+  </section>
   </main>
 
 <footer class="footer">
 
-    <img src="img/map" width="175" height="45" alt="Логотип магазина Device">
-    <p class="footer__address">г.Москва , Улица строителей , 15 </p>
-    <p class="footer-social">
-      <a class="social-button" href="#">facebook.com</a>
-      <a class="social-button" href="#">twitter.com</a>
-      <a class="social-button" href="#">instagram.com</a>
-    </p>
+  <img src="img/map" width="175" height="45" alt="Логотип магазина Device">
+  <p class="footer__address">г.Москва , Улица строителей , 15 </p>
+  <ul class="footer-social">
+    <li>
+      <a class="social-button" href="#">facebook.com</a></li>
+    <li>
+      <a class="social-button" href="#">twitter.com</a></li>
+    <li>
+      <a class="social-button" href="#">instagram.com</a></li>
+  </ul>
 
-    <p class="footer_user">
-      <a class="footer-button-login" href="#">Войти</a>
-      <a class="footer-button-compare" href="#">Сравнить</a>
-      <a class="footer-button-cart" href="#">Корзина</a>
-    </p>
+  <ul class="footer_user">
+    <li>
+      <a class="footer-button-login" href="#">Войти</a></li>
+    <li>
+      <a class="footer-button-compare" href="#">Сравнить</a></li>
+    <li>
+      <a class="footer-button-cart" href="#">Корзина</a></li>
+  </ul>
+
+  <ul class="site-navigation">
+    <li>
+      <a href="#">Гарантия</a></li>
+    <li>
+      <a href="#">Доставка</a></li>
+    <li>
+      <a href="#">Контакты</a></li>
+  </ul>
 
 
-  <nav class="footer-navigation">
-    <ul class="site-navigation">
-      <li>
-        <a href="#">Каталог товаров</a></li>
-      <li>
-        <a href="#">Гарантия</a></li>
-      <li>
-        <a href="#">Доставка</a></li>
-      <li>
-        <a href="#">Контакты</a></li>
-    </ul>
-  </nav>
-
-  <a href="tel">Тел.:+7(495)495-95-95</a>
+  <p>Тел.:<a href="tel">+7(495)495-95-95</a></p>
   <p class="footer-copyright">
-    <b>Разработано:</b>
-    <a href="https://htmlacademy.ru">HTML Academy</a>
+    <a href="https://htmlacademy.ru"></a>
   </p>
-
 </footer>
 </body>
 </html>
