--- a/index.html
+++ b/index.html
@@ -9,90 +9,190 @@
   <a class="main-header-logo">
     <img src="logo-main" width="175" height="45" alt="Логотип магазина Device">
   </a>
-  <a href="#">Поиск по сайту</a>
+  <p>Поиск по сайту</p>
   <!-- Здесь будет форма -->
   <ul class="user-navigation">
     <li>
-      <a href="#">Войти</a></li>
+      <a href="#">Войти</a>
+    </li>
     <li>
-      <a href="#">Сравнить</a></li>
+      <a href="#">Сравнить</a>
+    </li>
     <li>
-      <a href="#">Корзина</a></li>
+      <a href="#">Корзина</a>
+    </li>
   </ul>
+
   <nav class="header-navigation">
-    <ul class="site-navigation">
+    <ul class="catalog-list-header">
       <li>
-        <a href="catalog.html">Каталог товаров</a></li>
+        <a href="#">Вирутальная реальность</a>
+      </li>
       <li>
-        <a href="warranty.html">Гарантия</a></li>
+        <a href="#">Моноподы для селфи</a>
+      </li>
       <li>
-        <a href="delivery.html">Доставка</a></li>
+        <a href="#">Экшн камеры</a>
+      </li>
       <li>
-        <a href="contacts.html">Контакты</a></li>
+        <a href="#">Фитнес браслеты</a>
+      </li>
+      <li>
+        <a href="#">Умные часы</a>
+      </li>
+      <li>
+        <a href="#">Квадрокоптеры</a>
+      </li>
     </ul>
-  </nav>
+    </nav>
+  <ul class="services-header">
+      <li>
+        <a href="warranty.html">Гарантия</a>
+      </li>
+      <li>
+        <a href="delivery.html">Доставка</a>
+      </li>
+      <li>
+        <a href="contacts.html">Контакты</a>
+      </li>
+    </ul>
+
 </header>
 
- <main class="container">
-  <section class="main">
-  <h2 class="visually-hidden">Селфи-палка</h2>
-  <b>Делай селфи, как Бен Стиллер</b>
-  <img src="img/selfi-stick-main.jpg" alt="Селфи-палка" height="1458" width="1152">
-  <p>Самая длинная палка для селфи доступна в&nbsp;нашем магазине.
-        Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
+<main class="container">
+  <article>
+   <section class="main-slider-1">
+   <h2 class="visually-hidden">Селфи-палка</h2>
+   <b>Делай селфи, как Бен Стиллер</b>
+   <img src="img/selfi-stick-main.jpg" alt="Селфи-палка" height="1458" width="1152">
+   <p>Самая длинная палка для селфи доступна в&nbsp;нашем магазине. Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
       <a href="#">Подробнее</a>
   <ul class="feature-list">
-  <li>Длинна палки</li>
-    <li>8,5 м</li>
-    <li>Вес палки</li>
-    <li>5 кг</li>
-    <li>Материал</li>
-    <li>Карбон</li>
-  </ul>
-  </section>
+    <li>
+      <span class="main-features-value">8,5 м</span>
+      <span class="main-features-type">Длинна палки</span>
+    </li>
+    <li>
+      <span class="main-features-value">5 кг</span>
+      <span class="main-features-type">Вес палки</span>
+    </li>
+    <li>
+      <span class="main-features-value">Карбон</span>
+      <span class="main-features-type">Материал</span>
+    </li>
+    </ul>
+    </section>
+  </article>
 
-  <section class="catalog-list">
-  <h2 class="visually-hidden">Каталог товаров</h2>
-    <ul class="catalog-list">
-      <li>
-          <a href="#">Вирутальная реальность</a></li>
+   <article> <section class="main-slider-2">
+     <h2 class="visually-hidden">Фитнес браслет</h2>
+     <b>Худеем
+      правильно!</b>
+     <img src="img/i-clock.jpg" alt="Фитнес браслет" height="1458" width="1152">
+     <p>Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы
+      не&nbsp;пропускать занятия и&nbsp;соблюдать диету.</p>
+     <a href="#">Подробнее</a>
+     <ul class="feature-list">
+       <li>
+         <span class="main-features-value">40 часов</span>
+         <span class="main-features-type">Без подзарядки</span>
+      </li>
+    </ul>
+    </section>
+   </article>
+
+  <article>
+   <section class="main-slider-3">
+     <h2 class="visually-hidden">Квадракоптер</h2>
+     <b>Порхает как бабочка,
+      жалит как пчела!</b>
+      <img src="img/qudrocopter.jpg" alt="Квадракоптер" height="1458" width="1152">
+      <p>Этот обычный, на первый взгляд, квадрокоптер оснащен
+      мощным лазером, замаскированным под стандартную камеру.</p>
+      <a href="#">Подробнее</a>
+       <ul class="feature-list">
+       <li>
+         <span class="main-features-value">800 м</span>
+         <span class="main-features-type">Дальность полета</span>
+       </li>
+       <li>
+         <span class="main-features-value">50 м</span>
+         <span class="main-features-type">Радиус поражения</span>
+       </li>
+     </ul>
+   </section>
+  </article>
+
+    <section class="catalog-list">
+    <h2 class="visually-hidden">Каталог товаров</h2>
+      <ul class="catalog-list">
         <li>
-          <a href="#">Моноподы для селфи</a></li>
+          <a href="#">Вирутальная реальность</a>
+        </li>
         <li>
-          <a href="#">Экшн камеры</a></li>
+          <a href="#">Моноподы для селфи</a>
+        </li>
         <li>
-          <a href="#">Фитнес браслеты</a></li>
+          <a href="#">Экшн камеры</a>
+        </li>
         <li>
-          <a href="#">Умные часы</a></li>
+          <a href="#">Фитнес браслеты</a>
+        </li>
         <li>
-          <a href="#">Квадрокоптеры</a></li>
+          <a href="#">Умные часы</a>
+        </li>
+        <li>
+          <a href="#">Квадрокоптеры</a>
+        </li>
       </ul>
   </section>
 
   <section class="service">
-  <h2 class="visually-hidden">Доставка</h2>
+    <div class="services">
     <ul class="services">
       <li>
-        <a href="delivery">Доставка</a>
+        <a href="#">Доставка</a>
+      </li>
+      <li>
+        <a href="#">Гарантия</a>
+      </li>
+      <li>
+        <a href="#">Кредит</a>
+      </li>
+     </ul>
+
+      <section class="delivery">
+        <h3>Доставка</h3>
         <p>Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо к&nbsp;вашему подъезду совершенно бесплатно!
           Ведь мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.</p>
-      </li>
-      <li><a href="warranty">Гарантия</a>
-      </li>
-      <li><a href="credit">Кредит</a></li>
-    </ul>
+      </section>
+
+      <section>
+        <h3>Гарантия</h3>
+        <p>Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash; не&nbsp;переживайте, мы&nbsp;выдадим вам новый.
+          Товар, не&nbsp;дом, конечно&nbsp;же.</p>
+      </section>
+
+      <section>
+        <h3>Кредит</h3>
+        <p>Залезть в&nbsp;долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные
+          условия кредита. Выгодные для нашего банка, разумеется.</p>
+      </section>
+    </div>
   </section>
 
-
-
   <section class="partners">
-    <h2 class="visually-hidden">Наши партнеры</h2>
-   <p class="partners">
-  <a class="partners-link__djj" href="#">DJJ</a>
-  <a class="partners-link__spadgets" href="#">SPAdgets</a>
-  <a class="partners-link__GoPRO" href="#">GoPRO</a>
-  <a class="partners-link__vive" href="#">VIVE</a>
-</p>
+      <h2 class="visually-hidden">Наши партнеры</h2>
+    <ul class="partners">
+    <li><a class="partners-link__djj" href="#">DJJ</a>
+     </li>
+    <li><a class="partners-link__spadgets" href="#">SPAdgets</a>
+     </li>
+    <li><a class="partners-link__GoPRO" href="#">GoPRO</a>
+     </li>
+    <li><a class="partners-link__vive" href="#">VIVE</a>
+     </li>
+</ul>
   </section>
 
   <section class="about-us">
@@ -108,36 +208,45 @@
       <li>
         <b>ЖелДорЭкспедиция</b></li>
     </ul>
-        <a href="#">Подробнее о нас</a>
-
+       <a href="#">Подробнее о нас</a>
+  </section>
+  <section class="contacts">
        <h2>Контакты</h2>
-          <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.Всякое бывает.</p>
+       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.Всякое бывает.</p>
        <img src="img/img:map-big.png" width="460" height="320" alt="Карта">
        <a href="#">Напишите нам</a>
-  </section>
+     </section>
 </main>
 
+ <footer class="footer">
 
-<footer class="footer">
-
-<img src="img/map" width="175" height="45" alt="Логотип магазина Device">
+    <img src="img/map" width="175" height="45" alt="Логотип магазина Device">
     <p class="footer__address">г.Москва , Улица строителей , 15 </p>
-   <p class="footer-social">
-     <a class="social-button" href="#">facebook.com</a>
-     <a class="social-button" href="#">twitter.com</a>
-     <a class="social-button" href="#">instagram.com</a>
-   </p>
+    <ul class="footer-social">
+     <li>
+       <a class="social-button" href="#">facebook.com</a>
+     </li>
+     <li>
+       <a class="social-button" href="#">twitter.com</a>
+     </li>
+     <li>
+       <a class="social-button" href="#">instagram.com</a>
+     </li>
+   </ul>
 
-    <p class="footer_user">
-      <a class="footer-button-login" href="#">Войти</a>
-      <a class="footer-button-compare" href="#">Сравнить</a>
-      <a class="footer-button-cart" href="#">Корзина</a>
-    </p>
-
-  <nav class="footer-navigation">
-    <ul class="site-navigation">
+     <ul class="footer_user">
       <li>
-        <a href="#">Каталог товаров</a></li>
+      <a class="footer-button-login" href="#">Войти</a>
+     </li>
+      <li>
+       <a class="footer-button-compare" href="#">Сравнить</a>
+      </li>
+      <li>
+       <a class="footer-button-cart" href="#">Корзина</a>
+      </li>
+     </ul>
+
+    <ul class="site-navigation">
       <li>
         <a href="#">Гарантия</a></li>
       <li>
@@ -145,14 +254,12 @@
       <li>
         <a href="#">Контакты</a></li>
     </ul>
-  </nav>
 
-  <a href="tel">Тел.:+7(495)495-95-95</a>
-    <p class="footer-copyright">
-      <b>Разработано:</b>
-      <a href="https://htmlacademy.ru">HTML Academy</a>
+
+    <p>Тел.:<a href="tel">+7(495)495-95-95</a></p>
+      <p class="footer-copyright">
+      <a href="https://htmlacademy.ru"></a>
     </p>
-
 </footer>
 </body>
 </html>
